--- a/Question2 Template.html
+++ b/Question2 Template.html
@@ -156,6 +156,9 @@
       .end {
         display: none;
       }
+      .esc {
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -214,6 +217,8 @@
               <span id="endScore">YOUR SCORE : </span>
               <p class="gameOver">TRY AGAIN</p>
               <p class="gameOver">PRESS SPACEBAR TO START</p>
+              <p class="esc">PAUSE</p>
+              <p class="esc">PRESS SPACEBAR TO CONTINUE</p>
               <p class="end">CONGRATUATION! ! !</p>
               <p class="end">THANK YOU FOR PLAYING! ! !</p>
               <p class="end">PRESS R TO RESTART</p>
@@ -230,22 +235,24 @@
       let frame = 0;
 
       //Score
-      let score = 95;
-      let scoreDiv = document.getElementById("score");
-      let finalScoreDiv = document.getElementById("endScore");
+      let score = 0;
+      let idScore = document.getElementById("score");
+      let idEndScore = document.getElementById("endScore");
 
       let stage = 1;
 
       //Game Over
-      let gameOver = document.querySelectorAll(".gameOver");
+      let classGameOver = document.querySelectorAll(".gameOver");
 
       //Pause
-      let isPause = false;
+      let isGameOver = false;
       let pauseScreen = document.getElementById("pause");
+      let isGamePause = false;
+      let classEsc = document.querySelectorAll(".esc");
 
       //End
       let isEnd = false;
-      let endGame = document.querySelectorAll(".end");
+      let classEnd = document.querySelectorAll(".end");
 
       //Player
       const playerWidth = 64;
@@ -254,7 +261,7 @@
       let playerY = canvas.height - playerHeight;
       let playerIndexX = 0;
       let playerIndexY = 1;
-      let playerSpeed = 4;
+      let playerSpeed = 5;
       let pressLeft = false;
       let pressRight = false;
       let pressUp = false;
@@ -272,8 +279,8 @@
       const bulletSpeed = 10;
       const bulletImg = new Image();
       bulletImg.src = "/shooter/bullet.png";
-      const bulletSymbolW = 32;
-      const bulletSymbolH = 48;
+      const bulletSymbolWidth = 32;
+      const bulletSymbolHeight = 48;
       const bulletSymbolImg = new Image();
       bulletSymbolImg.src = "/shooter/bulletSymbol.png";
 
@@ -284,9 +291,7 @@
       const enemyHeight = 64;
       let enemies = [];
       let enemyIndex = 0;
-      //   let numOfEnemy = Math.floor(Math.random() * (4 - 1) + 1);
       const enemyInterval = 60;
-      let enemyDelay = 0;
       const enemy1Img = new Image();
       enemy1Img.src = "/shooter/meteor.png";
 
@@ -320,21 +325,28 @@
               pressRight = true;
               bulletDelay = 0;
               break;
+            // Up arrow key
             case 38:
               pressUp = true;
               bulletDelay = 0;
               break;
+            // Down arrow key
             case 40:
               pressDown = true;
               bulletDelay = 0;
               break;
+            //Space bar shoot
             case 32:
               isShoot = true;
-              if (isPause) {
-                if (!isEnd) {
-                  isPause = false;
+              if (isGameOver) {
+                if (!isEnd && !isGamePause) {
+                  isGameOver = false;
                   pauseScreen.style.display = "none";
                   reloadGame();
+                } else if (isGamePause) {
+                  isGameOver = false;
+                  isGamePause = false;
+                  pauseScreen.style.display = "none";
                 }
               } else {
                 if (isShoot) {
@@ -352,11 +364,22 @@
                 }
               }
               break;
+            //R restart
             case 82:
-              isPause = false;
+              isGameOver = false;
               isEnd = false;
               pauseScreen.style.display = "none";
               reloadGame();
+            case 27:
+              if (isGamePause) {
+                isGameOver = false;
+                isGamePause = false;
+                pauseScreen.style.display = "none";
+              } else {
+                isGameOver = true;
+                isGamePause = true;
+                showPauseScreen();
+              }
           }
         });
         window.addEventListener("keyup", function (event) {
@@ -478,10 +501,10 @@
         for (let i = 1; i <= stage; i++) {
           ctx.drawImage(
             bulletSymbolImg,
-            canvas.width - bulletSymbolW * i,
+            canvas.width - bulletSymbolWidth * i,
             0,
-            bulletSymbolW,
-            bulletSymbolH
+            bulletSymbolWidth,
+            bulletSymbolHeight
           );
         }
 
@@ -515,30 +538,23 @@
       function randomEnemy() {
         const enemySpeed = Math.floor(Math.random() * (6 - 3) + 3);
         const enemyXY = {
-          x: Math.floor(
-            Math.random() * (canvas.width - enemyWidth * 2 - 20) + enemyWidth
-          ),
+          x: Math.floor(Math.random() * (canvas.width - enemyWidth - 20)),
           y: enemyY,
           speed: enemySpeed,
         };
-
-        if (score < 10 && frame % 80 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 10 && score < 15 && frame % 75 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 15 && score < 20 && frame % 70 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 20 && score < 25 && frame % 65 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 25 && score < 30 && frame % 60 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 30 && score < 40 && frame % 50 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 40 && score < 60 && frame % 40 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 60 && score < 80 && frame % 30 == 0) {
-          enemies.push(enemyXY);
-        } else if (score >= 80 && frame % 10 == 0) {
+        const enemySpawnInterval = {
+          0: 80,
+          10: 70,
+          20: 60,
+          30: 50,
+          40: 40,
+          50: 30,
+          60: 30,
+          70: 20,
+          80: 10,
+        };
+        const enemySpawnDelay = enemySpawnInterval[Math.floor(score / 10) * 10];
+        if (frame % enemySpawnDelay == 0) {
           enemies.push(enemyXY);
         }
       }
@@ -548,8 +564,7 @@
         enemies.forEach((enemy) => {
           // Enemy leave the canvas
           if (enemy.y > canvas.height) {
-            finalScoreDiv.innerHTML += score;
-            isPause = true;
+            isGameOver = true;
           }
           // Enemy touch the player.
           if (
@@ -558,8 +573,7 @@
             enemy.y + enemyHeight > playerY &&
             enemy.y < playerY
           ) {
-            isPause = true;
-            finalScoreDiv.innerHTML += score;
+            isGameOver = true;
           }
           bullets.forEach((bullet) => {
             // Enemy touches the bullet.
@@ -591,45 +605,47 @@
         pressRight = false;
         pressUp = false;
         pressDown = false;
-        finalScoreDiv.innerHTML = "YOUR SCORE : ";
+        idEndScore.innerHTML = "YOUR SCORE : ";
       }
 
       //Level up
       function levelUp() {
-        if (score >= 20 && score < 40) {
+        if (score >= 30 && score < 60) {
           stage = 2;
-        } else if (score >= 40) {
-          stage = 3;
         } else if (score >= 60) {
-          playerSpeed = 5;
+          stage = 3;
+        } else if (score >= 80) {
+          playerSpeed = 6;
         }
         if (score >= 100) {
-          isPause = true;
+          isGameOver = true;
           isEnd = true;
         }
       }
 
       //Pause screen pop out
       function showPauseScreen() {
-        if (isPause) {
+        if (isGameOver) {
+          idEndScore.innerHTML = "YOUR SCORE : " + score;
           pauseScreen.style.display = "block";
-          endGame.forEach((e) => {
+          console.log("isGameOver");
+          classEnd.forEach((e) => {
             e.style.display = isEnd ? "block" : "none";
           });
-          gameOver.forEach((e) => {
-            e.style.display = isEnd ? "none" : "block";
+          classGameOver.forEach((e) => {
+            e.style.display = isEnd || isGamePause ? "none" : "block";
           });
-          if (isEnd) {
-            finalScoreDiv.innerHTML += score;
-          }
+          classEsc.forEach((e) => {
+            e.style.display = isGamePause ? "block" : "none";
+          });
         }
       }
 
       // Part-2c: Update game objects by using the “update()” function. 8 marks
       function update() {
         //Update Score
-        scoreDiv.innerText = "SCORE : " + score;
-        if (!isPause) {
+        idScore.innerText = "SCORE : " + score;
+        if (!isGameOver) {
           levelUp();
           move();
           draw();
