--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
     }
 
-    .arrowKey {
+    .eyey {
       display: none;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+      grid-template-rows: 1fr;
       margin: 0.8em 0;
       display: none;
       gap: 0.1em;
@@ -213,11 +213,11 @@
       }
 
       .control {
-        display: flex;
+        display: grid;
         justify-content: center;
         align-items: center;
-        gap: 10vi;
-        margin-top: 1em;
+        gap: 5vi;
+        padding-top: 1em;
       }
 
       .control button {
@@ -226,36 +226,28 @@
         height: 15vi;
       }
 
-      .arrowKey {
-        display: grid;
-      }
-
-      .arrowKey button {
-        margin: 0 auto;
-      }
-
-
       #up {
-        grid-column: 2;
-        grid-row: 1;
+        /* grid-column: 2;
+        grid-row: 1; */
       }
 
       #down {
-        grid-column: 2;
-        grid-row: 2;
+        /* grid-column: 2;
+        grid-row: 2; */
       }
 
       #right {
         grid-column: 3;
-        grid-row: 2;
+
       }
 
       #left {
         grid-column: 1;
-        grid-row: 2;
+
       }
 
       #shootKey {
+        grid-column: 2;
         background-color: #9b2256;
         border: #f2ce44 3px solid;
         border-radius: 50%;
@@ -266,7 +258,7 @@
         justify-content: center;
         align-items: center;
         gap: 1em;
-        margin-top: 2em;
+        padding-top: 1em;
       }
 
       .option button {
@@ -359,13 +351,9 @@
   </div>
 
   <div class="control">
-    <div class="arrowKey">
-      <button id="up" onpointerdown="up()" onpointerup="stopUp()">▲</button>
-      <button id="down" onpointerdown="down()" onpointerup="stopDown()">▼</button>
-      <button id="left" onpointerdown="left()" onpointerup="stopLeft()">◄</button>
-      <button id="right" onpointerdown="right()" onpointerup="stopRight()">►</button>
-    </div>
+    <button id="left" onpointerdown="left()" onpointerup="stopLeft()">◄</button>
     <button id="shootKey" onpointerdown="shoot()" onpointerup=" bulletDelay=0 "></button>
+    <button id="right" onpointerdown="right()" onpointerup="stopRight()">►</button>
   </div>
   <div class="option">
     <button id="esc" onclick="pauseGame()">PAUSE</button>
@@ -380,7 +368,7 @@
     let frame = 0;
 
     //Score
-    let score = 0;
+    let score = 90;
     let idScore = document.getElementById("score");
     let idEndScore = document.getElementById("endScore");
 
@@ -461,6 +449,7 @@
     let continueInfo = document.getElementById("continueInfo")
 
     //Read screen size
+    let isMobile = false
     const screenWidth = document.documentElement.clientWidth
     const screenHeight = document.documentElement.clientHeight
 
@@ -469,6 +458,7 @@
       idStartInfo.innerHTML = "PRESS O TO START"
       restartInfo.innerHTML = "PRESS RESTART TO START"
       continueInfo.innerHTML = "PRESS O TO CONTINUE"
+      isMobile = true
     }
 
     //////////////////////////////
@@ -746,7 +736,7 @@
 
     //Spawn enemy
     function randomEnemy() {
-      const enemySpeed = Math.floor(Math.random() * (6 - 3) + 3);
+      const enemySpeed = isMobile ? Math.floor(Math.random() * (4 - 2) + 2) : Math.floor(Math.random() * (6 - 3) + 3);
       const enemyXY = {
         x: Math.floor(Math.random() * (canvas.width - enemyWidth - 20)),
         y: enemyY,
@@ -763,7 +753,7 @@
         70: 20,
         80: 10,
       };
-      const enemySpawnDelay = enemySpawnInterval[Math.floor(score / 10) * 10];
+      const enemySpawnDelay = enemySpawnInterval[Math.floor(score / 10) * 10] || 10;
       if (frame % enemySpawnDelay == 0) {
         enemies.push(enemyXY);
       }
