add sfx variable

--- a/index.html
+++ b/index.html
@@ -500,10 +500,26 @@
     let isGameMute = false
     let volumeBtn = document.querySelectorAll(".volume")
 
-
+    //Game Instruction
     let isShowInfo = false
     let classInfo = document.querySelectorAll(".info")
 
+    //Game Audio
+    const backgroundMusic = new Audio()
+    // backgroundMusic.src = ""
+    // backgroundMusic.play()
+    const shootSfx = new Audio()
+    // shootSfx.src = ""
+    const explodeSfx = new Audio()
+    // explodeSfx.src = ""
+    const levelUpSfx = new Audio()
+    // levelUpSfx.src = ""
+    const finalStageSfx = new Audio()
+    // finalStageSfx.src = ""
+    const endSfx = new Audio()
+    // endSfx.src = ""
+    const gameOverSfx = new Audio()
+    // gameOverSfx.src = ""
 
     //End
     let isEnd = false;
