--- a/index.html
+++ b/index.html
@@ -373,8 +373,9 @@
         }
 
         .topBar button {
-          width: 40px;
-          height: 40px;
+          width: 30px;
+          height: 30px;
+          font-size: 15px;
         }
       }
     }
