--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       text-align: center;
       width: 50px;
       height: 50px;
+      font-size: 20px;
     }
 
     #shoot {
@@ -239,6 +240,11 @@
       .topBar {
         display: flex;
         padding: 10px 0;
+      }
+
+      .topBar button {
+        width: 40px;
+        height: 40px;
       }
 
       #topBarVolume {
