--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       align-items: center;
       padding-top: 10px;
       height: auto;
+      text-align: center;
     }
 
     #topBarVolume {
@@ -100,14 +101,14 @@
 
     .topBar button,
     .volume {
+      font-size: 20px;
+      max-width: 50px;
+      max-height: 50px;
       background-color: transparent;
       border-radius: 50%;
       border: white 3px solid;
       color: white;
       text-align: center;
-      width: 50px;
-      height: 50px;
-      font-size: 20px;
     }
 
     #shoot {
