--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
       .topBar {
         display: flex;
         padding: 10px 0;
+        height: fit-content;
       }
 
       .topBarBtn {
@@ -249,6 +250,10 @@
         justify-content: space;
         align-items: center;
         gap: 5px;
+      }
+
+      .topBarBtn i {
+        text-align: center;
       }
 
       #topBarVolume {
