--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       justify-content: space-around;
       align-items: center;
       padding-top: 10px;
-      height: auto;
       text-align: center;
     }
 
@@ -242,19 +241,15 @@
       .topBar {
         display: flex;
         padding: 10px 0;
-        height: fit-content;
       }
 
       .topBarBtn {
         display: flex;
-        justify-content: space;
+        justify-content: space-around;
         align-items: center;
         gap: 5px;
       }
 
-      .topBarBtn i {
-        text-align: center;
-      }
 
       #topBarVolume {
         display: inline;
@@ -381,14 +376,6 @@
           margin-top: 0;
         }
 
-        #topBarVolume {
-          display: inline;
-        }
-
-        #infoBtn {
-          display: inline;
-        }
-
         .option {
           margin-top: 0;
         }
@@ -413,7 +400,6 @@
         </button>
       </div>
     </span>
-    <!-- <button id="shoot">O</button> -->
     <div id="gameScreen">
       <div id="gameInfo">
         <h2>Game Instruction :</h2>
