--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      padding: 1vw 1vw 2vh;
+      padding: 1vh 1vw 2vh 1vw;
     }
 
     button {
@@ -240,7 +240,6 @@
 
       .topBar {
         display: flex;
-        padding: 10px 0;
       }
 
       .topBarBtn {
