--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
 
         .topBar button {
           font-size: 25px;
-          width: 12vi;
-          height: 12vi;
+          min-width: 12vi;
+          min-height: 12vi;
         }
 
         #pause {
