--- a/index.html
+++ b/index.html
@@ -513,8 +513,9 @@
     let idEndScore = document.getElementById("endScore");
     let tryCount = 0
     let idCount = document.getElementById("count")
-    idCount.innerHTML = 'Try : ' + window.localStorage.getItem("count")
-    let storageCount = parseInt(window.localStorage.getItem("count"))
+    let storageCount = window.localStorage.getItem("count")
+    storageCount = storageCount ? parseInt(storageCount) : storageCount
+    idCount.innerHTML = 'Try : ' + storageCount
 
     function saveCount() {
       tryCount++
