--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         height: 2em;
       }
 
-      @media screen and (max-width: 376px) {
+      @media screen and (max-width: 375px) {
         canvas {
           width: 250px;
           height: 300px;
@@ -366,8 +366,8 @@
 
         .topBar button {
           font-size: 25px;
-          min-width: 12vi;
-          min-height: 12vi;
+          min-height: 25px;
+          min-width: 25px;
         }
 
         #pause {
